<resources>
    <string name="app_name">Varsity Grade Calculation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    //home fragment
    <string name="dialog_title">Create New Semister</string>
    <string name="dialog_edittext_hint">Semister Name</string>
    <string name="create">Create</string>
    <string name="title">Insert your course credit and gpa</string>
    <string name="credit">Credit</string>
    <string name="gpa">GPA</string>
    <string name="_00_00">00.00</string>
    <string name="add">ADD</string>
    <string name="course_name">COURSE NAME</string>
    <string name="_4_00">4.00</string>
    <string name="_3_75">3.75</string>

</resources>