<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".calculation.SecondFragment">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/credit"
            android:ems="8"
            android:id="@+id/editTextTextPersonName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:autofillHints="@string/credit"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/gpa"
            android:ems="8"
            android:id="@+id/editTextTextPersonName2"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
            android:autofillHints="@string/gpa"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/button"
            android:ems="8"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"/>
    <TextView
            android:text="@string/_00_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/courseRecyclerview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginTop="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>