<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"/>
    <EditText
            android:id="@+id/dialog_semisterName_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_edittext_hint"
            android:paddingLeft="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"/>
    <Button
            android:id="@+id/dialog_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_semisterName_edittext"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>