<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/courseNameTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
        <TextView
                android:id="@+id/courseCreditTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_00"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:id="@+id/courseGPATextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_75"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintStart_toEndOf="@+id/courseNameTextview"
                app:layout_constraintEnd_toStartOf="@+id/courseCreditTextview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>